# pvelog

./: .env.example  .gitignore  README.md  agents.md  ai_coding_task.md  docker-compose.yml
.github/workflows/: build-agent.yml
agent/: go.mod  install_local.sh
agent/cmd/pve-agent/: main.go
agent/configs/: agent.yaml
agent/deploy/: pve-agent.service
agent/deploy/sudoers.d/: pve-agent
agent/internal/auth/: psk.go
agent/internal/collector/: dedup.go  filter.go  journald.go
agent/internal/config/: config.go  fetcher.go
agent/internal/executor/: actions.go  handler.go  sandbox.go  validator.go
agent/internal/heartbeat/: heartbeat.go
agent/internal/pusher/: http_pusher.go
controller/: Dockerfile  pyproject.toml
controller/api/: main.py
controller/api/middleware/: auth.py
controller/api/routes/: analysis.py  config.py  heartbeat.py  log_ingest.py
controller/config/: allowed_actions.py  prompts.py  settings.py
controller/core/: alert_manager.py  analyzer.py  log_filter.py  log_sanitizer.py  rate_limiter.py  tool_dispatcher.py  tool_validator.py
controller/db/: database.py  models.py
controller/scheduler/: tasks.py
controller/services/: email_service.py  llm_client.py
controller/tests/: test_log_filter.py
docs/: deployment.md
scripts/: deploy_agent.sh
